# austin-deal-finder

./: .env.example  .gitignore  BUILD_SPEC.md  README.md  alembic.ini  filtered_deals.json  pyproject.toml  requirements.txt  top_deals.json
alembic/: env.py
alembic/versions/: 6927b898dfd4_initial_schema.py
scripts/: run_scorer.py  run_scrape.py  setup_db.py
src/: cli.py  config.py
src/api/: app.py
src/database/: connection.py  crud.py  models.py
src/enrichment/: cost_estimator.py  geocoder.py  llm_enricher.py
src/notifications/: telegram.py
src/scoring/: deal_scorer.py
src/scrapers/: apartments_com.py  base.py  craigslist.py  facebook_apify.py  hotpads.py  manual.py  reddit.py  zillow.py
templates/: dashboard.html
tests/: conftest.py  test_enrichment.py  test_scoring.py  test_scrapers.py
