[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "austin-deal-finder"
version = "1.0.0"
description = "Production-ready housing deal-finding engine for downtown Austin"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135",
    "uvicorn[standard]>=0.42",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.31",
    "psycopg2-binary>=2.9",
    "alembic>=1.18",
    "httpx>=0.28",
    "beautifulsoup4>=4.14",
    "lxml>=6.0",
    "praw>=7.8",
    "openai>=2.0",
    "python-dotenv>=1.2",
    "apscheduler>=3.11",
    "jinja2>=3.1",
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "click>=8.3",
    "aiohttp>=3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.1",
]

[project.scripts]
deal-finder = "src.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
